--- a/.env.example
+++ b/.env.example
@@ -6,7 +6,7 @@ FRONTEND_URL=http://0.0.0.0:3000
 
 # If the variable is set, all non-authenticated pages would fallback to the default locale.
 # Whenever a new account is created, the default language will be DEFAULT_LOCALE instead of en
-# DEFAULT_LOCALE=en
+DEFAULT_LOCALE=ru
 
 # If you plan to use CDN for your assets, set Asset CDN Host
 ASSET_CDN_HOST=
@@ -35,23 +35,23 @@ REDIS_SENTINEL_MASTER_NAME=
 # Postgres Database config variables
 POSTGRES_HOST=postgres
 POSTGRES_USERNAME=postgres
-POSTGRES_PASSWORD=
+POSTGRES_PASSWORD=cao95records
 RAILS_ENV=development
 RAILS_MAX_THREADS=5
 
 # The email from which all outgoing emails are sent
 # could user either  `email@yourdomain.com` or `BrandName <email@yourdomain.com>`
-MAILER_SENDER_EMAIL=Chatwoot <accounts@chatwoot.com>
+MAILER_SENDER_EMAIL=smtp-relay.gmail.com
 
 
 #SMTP domain key is set up for HELO checking
 SMTP_DOMAIN=chatwoot.com
 # the default value is set "mailhog" and is used by docker-compose for development environments,
 # Set the value as "localhost" or your SMTP address in other environments
-SMTP_ADDRESS=mailhog
-SMTP_PORT=1025
-SMTP_USERNAME=
-SMTP_PASSWORD=
+SMTP_ADDRESS=smtp-relay.gmail.com
+SMTP_PORT=587
+SMTP_USERNAME=margulan0702@gmail.com
+SMTP_PASSWORD=koketate777
 # plain,login,cram_md5
 SMTP_AUTHENTICATION=
 SMTP_ENABLE_STARTTLS_AUTO=true
