--- a/config/database.yml
+++ b/config/database.yml
@@ -8,13 +8,13 @@ development:
   <<: *default
   database: <%= ENV.fetch('POSTGRES_DATABASE', 'chatwoot_dev') %>
   username: <%= ENV.fetch('POSTGRES_USERNAME', 'postgres') %>
-  password: <%= ENV.fetch('POSTGRES_PASSWORD', '') %>
+  password: <%= ENV.fetch('POSTGRES_PASSWORD', 'cao95records') %>
 
 test:
   <<: *default
   database: <%= ENV.fetch('POSTGRES_DATABASE', 'chatwoot_test') %>
   username: <%= ENV.fetch('POSTGRES_USERNAME', 'postgres') %>
-  password: <%= ENV.fetch('POSTGRES_PASSWORD', '') %>
+  password: <%= ENV.fetch('POSTGRES_PASSWORD', 'cao95records') %>
 
 production:
   <<: *default
