fixed mailer & added all fields

--- a/.env.example
+++ b/.env.example
@@ -41,17 +41,17 @@ RAILS_MAX_THREADS=5
 
 # The email from which all outgoing emails are sent
 # could user either  `email@yourdomain.com` or `BrandName <email@yourdomain.com>`
-MAILER_SENDER_EMAIL=smtp-relay.gmail.com
+MAILER_SENDER_EMAIL=smtp.mailgun.org
 
 
 #SMTP domain key is set up for HELO checking
 SMTP_DOMAIN=chatwoot.com
 # the default value is set "mailhog" and is used by docker-compose for development environments,
 # Set the value as "localhost" or your SMTP address in other environments
-SMTP_ADDRESS=smtp-relay.gmail.com
-SMTP_PORT=587
-SMTP_USERNAME=margulan0702@gmail.com
-SMTP_PASSWORD=koketate777
+SMTP_ADDRESS=smtp.mailgun.org
+SMTP_PORT=465
+SMTP_USERNAME=chatwoot@mg.parent-staging.schooleducation.online
+SMTP_PASSWORD=0c480788cae4e18f09e6e4f8ae10a5d8-c4d287b4-eae4494f
 # plain,login,cram_md5
 SMTP_AUTHENTICATION=
 SMTP_ENABLE_STARTTLS_AUTO=true
