chatwoot integration with Jira (create an issue in Jira project)

--- a/.env.example
+++ b/.env.example
@@ -33,25 +33,25 @@ REDIS_SENTINELS=
 REDIS_SENTINEL_MASTER_NAME=
 
 # Postgres Database config variables
-POSTGRES_HOST=postgres
-POSTGRES_USERNAME=postgres
-POSTGRES_PASSWORD=cao95records
+POSTGRES_HOST=
+POSTGRES_USERNAME=
+POSTGRES_PASSWORD=
 RAILS_ENV=development
 RAILS_MAX_THREADS=5
 
 # The email from which all outgoing emails are sent
 # could user either  `email@yourdomain.com` or `BrandName <email@yourdomain.com>`
-MAILER_SENDER_EMAIL=smtp.mailgun.org
+MAILER_SENDER_EMAIL=
 
 
 #SMTP domain key is set up for HELO checking
 SMTP_DOMAIN=chatwoot.com
 # the default value is set "mailhog" and is used by docker-compose for development environments,
 # Set the value as "localhost" or your SMTP address in other environments
-SMTP_ADDRESS=smtp.mailgun.org
+SMTP_ADDRESS=
 SMTP_PORT=465
-SMTP_USERNAME=chatwoot@mg.parent-staging.schooleducation.online
-SMTP_PASSWORD=0c480788cae4e18f09e6e4f8ae10a5d8-c4d287b4-eae4494f
+SMTP_USERNAME=
+SMTP_PASSWORD=
 # plain,login,cram_md5
 SMTP_AUTHENTICATION=
 SMTP_ENABLE_STARTTLS_AUTO=true
@@ -155,3 +155,9 @@ USE_INBOX_AVATAR_FOR_BOT=true
 ## Development Only Config
 # if you want to use letter_opener for local emails
 # LETTER_OPENER=true
+
+## Jira credentials
+# JIRA_USERNAME can be your email
+JIRA_USERNAME=
+# Your generated Api token
+JIRA_API_TOKEN=
