add custom port bd

--- a/config/database.yml
+++ b/config/database.yml
@@ -8,16 +8,19 @@ development:
   <<: *default
   database: <%= ENV.fetch('POSTGRES_DATABASE', 'chatwoot_dev') %>
   username: <%= ENV.fetch('POSTGRES_USERNAME', 'postgres') %>
+  port: <%= ENV.fetch('POSTGRES_PORT', '5432') %>
   password: <%= ENV.fetch('POSTGRES_PASSWORD', '') %>
 
 test:
   <<: *default
   database: <%= ENV.fetch('POSTGRES_DATABASE', 'chatwoot_test') %>
   username: <%= ENV.fetch('POSTGRES_USERNAME', 'postgres') %>
+  port: <%= ENV.fetch('POSTGRES_PORT', '5432') %>
   password: <%= ENV.fetch('POSTGRES_PASSWORD', '') %>
 
 production:
   <<: *default
   database: <%= ENV.fetch('POSTGRES_DATABASE', 'chatwoot_production') %>
   username: <%= ENV.fetch('POSTGRES_USERNAME', 'chatwoot_prod') %>
+  port: <%= ENV.fetch('POSTGRES_PORT', '5432') %>
   password: <%= ENV.fetch('POSTGRES_PASSWORD', 'chatwoot_prod') %>
