--- a/docker-compose-og.yaml
+++ b/docker-compose-og.yaml
@@ -98,7 +98,7 @@ services:
 
   nginx:
     build:
-      context: ./nginx
+      context: .
       dockerfile: nginx/Dockerfile
     container_name: nginx
     restart: always
