--- a/nginx/conf.d/site.conf
+++ b/nginx/conf.d/site.conf
@@ -5,10 +5,6 @@ server {
 
   ssl_certificate /run/secrets/certificate;
   ssl_certificate_key /run/secrets/key;
-
-  # Point upstream to Chatwoot App Server
-  set $upstream rails:3000;
-
   # Nginx strips out underscore in headers by default
   # Chatwoot relies on underscore in headers for API
   # Make sure that the config is set to on.
@@ -19,7 +15,7 @@ server {
 
   location / {
     proxy_pass_header Authorization;
-    proxy_pass http://$upstream;
+    proxy_pass http://rails:3000;
     proxy_set_header Upgrade $http_upgrade;
     proxy_set_header Connection "upgrade";
     proxy_set_header Host $host;
