--- a/docker-compose-og.yaml
+++ b/docker-compose-og.yaml
@@ -8,11 +8,11 @@ services:
       args:
         BUNDLE_WITHOUT: ''
         EXECJS_RUNTIME: 'Node'
-        RAILS_ENV: 'development'
+        RAILS_ENV: 'production'
         RAILS_SERVE_STATIC_FILES: 'false'
     tty: true
     stdin_open: true
-    image: chatwoot:development
+    image: chatwoot
     env_file: .env
 
   rails:
@@ -20,7 +20,7 @@ services:
     build:
       context: .
       dockerfile: ./docker/dockerfiles/rails.Dockerfile
-    image: chatwoot-rails:development
+    image: chatwoot-rails
     volumes:
       - ./:/app:delegated
       - node_modules:/app/node_modules
@@ -36,15 +36,14 @@ services:
       - 3000:3000
     env_file: .env
     environment:
-      - WEBPACKER_DEV_SERVER_HOST=webpack
-      - NODE_ENV=development
-      - RAILS_ENV=development
+      - NODE_ENV=production
+      - RAILS_ENV=production
     entrypoint: docker/entrypoints/rails.sh
     command: ["bundle", "exec", "rails", "s", "-p", "3000", "-b", "0.0.0.0"]
 
   sidekiq:
     <<: *base
-    image: chatwoot-rails:development
+    image: chatwoot-rails
     volumes:
       - ./:/app:delegated
       - node_modules:/app/node_modules
@@ -54,31 +53,31 @@ services:
     depends_on:
       - redis
       - mailhog
-    environment:
-      - NODE_ENV=development
-      - RAILS_ENV=development
+      environment:
+      - NODE_ENV=production
+      - RAILS_ENV=production
     command: ["bundle", "exec", "sidekiq", "-C", "config/sidekiq.yml"]
 
-  webpack:
-    <<: *base
-    build:
-      context: .
-      dockerfile: ./docker/dockerfiles/webpack.Dockerfile
-    image: chatwoot-webpack:development
-    volumes:
-      - ./:/app:delegated
-      - node_modules:/app/node_modules # Node modules shared across containers
-      - packs:/app/public/packs
-      - cache:/app/tmp/cache
-      - bundle:/usr/local/bundle
-    ports:
-      - "3035" # Webpack dev server
-    environment:
-      - WEBPACKER_DEV_SERVER_HOST=0.0.0.0
-      - NODE_ENV=development
-      - RAILS_ENV=development
-    entrypoint: docker/entrypoints/webpack.sh
-    command: bin/webpack-dev-server
+  # webpack:
+  #   <<: *base
+  #   build:
+  #     context: .
+  #     dockerfile: ./docker/dockerfiles/webpack.Dockerfile
+  #   image: chatwoot-webpack
+  #   volumes:
+  #     - ./:/app:delegated
+  #     - node_modules:/app/node_modules # Node modules shared across containers
+  #     - packs:/app/public/packs
+  #     - cache:/app/tmp/cache
+  #     - bundle:/usr/local/bundle
+  #   ports:
+  #     - "3035" # Webpack dev server
+  #   environment:
+  #     - WEBPACKER_DEV_SERVER_HOST=0.0.0.0
+  #     - NODE_ENV=development
+  #     - RAILS_ENV=development
+  #   entrypoint: docker/entrypoints/webpack.sh
+  #   command: bin/webpack-dev-server
 
   redis:
     image: redis:alpine
