--- a/docker-compose-og.yaml
+++ b/docker-compose-og.yaml
@@ -53,31 +53,31 @@ services:
     depends_on:
       - redis
       - mailhog
-      environment:
+    environment:
       - NODE_ENV=production
       - RAILS_ENV=production
     command: ["bundle", "exec", "sidekiq", "-C", "config/sidekiq.yml"]
 
-  # webpack:
-  #   <<: *base
-  #   build:
-  #     context: .
-  #     dockerfile: ./docker/dockerfiles/webpack.Dockerfile
-  #   image: chatwoot-webpack
-  #   volumes:
-  #     - ./:/app:delegated
-  #     - node_modules:/app/node_modules # Node modules shared across containers
-  #     - packs:/app/public/packs
-  #     - cache:/app/tmp/cache
-  #     - bundle:/usr/local/bundle
-  #   ports:
-  #     - "3035" # Webpack dev server
-  #   environment:
-  #     - WEBPACKER_DEV_SERVER_HOST=0.0.0.0
-  #     - NODE_ENV=development
-  #     - RAILS_ENV=development
-  #   entrypoint: docker/entrypoints/webpack.sh
-  #   command: bin/webpack-dev-server
+  webpack:
+    <<: *base
+    build:
+      context: .
+      dockerfile: ./docker/dockerfiles/webpack.Dockerfile
+    image: chatwoot-webpack
+    volumes:
+      - ./:/app:delegated
+      - node_modules:/app/node_modules # Node modules shared across containers
+      - packs:/app/public/packs
+      - cache:/app/tmp/cache
+      - bundle:/usr/local/bundle
+    ports:
+      - "3035" # Webpack dev server
+    environment:
+      - WEBPACKER_DEV_SERVER_HOST=0.0.0.0
+      - NODE_ENV=production
+      - RAILS_ENV=production
+    entrypoint: docker/entrypoints/webpack.sh
+    command: bin/webpack-dev-server
 
   redis:
     image: redis:alpine
