--- a/docker-compose-og.yaml
+++ b/docker-compose-og.yaml
@@ -8,11 +8,11 @@ services:
       args:
         BUNDLE_WITHOUT: ''
         EXECJS_RUNTIME: 'Node'
-        RAILS_ENV: 'production'
+        RAILS_ENV: 'development'
         RAILS_SERVE_STATIC_FILES: 'false'
     tty: true
     stdin_open: true
-    image: chatwoot
+    image: chatwoot:development
     env_file: .env
 
   rails:
@@ -20,7 +20,7 @@ services:
     build:
       context: .
       dockerfile: ./docker/dockerfiles/rails.Dockerfile
-    image: chatwoot-rails
+    image: chatwoot-rails:development
     volumes:
       - ./:/app:delegated
       - node_modules:/app/node_modules
@@ -36,14 +36,15 @@ services:
       - 3000:3000
     env_file: .env
     environment:
-      - NODE_ENV=production
-      - RAILS_ENV=production
+      - WEBPACKER_DEV_SERVER_HOST=webpack
+      - NODE_ENV=development
+      - RAILS_ENV=development
     entrypoint: docker/entrypoints/rails.sh
     command: ["bundle", "exec", "rails", "s", "-p", "3000", "-b", "0.0.0.0"]
 
   sidekiq:
     <<: *base
-    image: chatwoot-rails
+    image: chatwoot-rails:development
     volumes:
       - ./:/app:delegated
       - node_modules:/app/node_modules
@@ -54,8 +55,8 @@ services:
       - redis
       - mailhog
     environment:
-      - NODE_ENV=production
-      - RAILS_ENV=production
+      - NODE_ENV=development
+      - RAILS_ENV=development
     command: ["bundle", "exec", "sidekiq", "-C", "config/sidekiq.yml"]
 
   webpack:
@@ -63,7 +64,7 @@ services:
     build:
       context: .
       dockerfile: ./docker/dockerfiles/webpack.Dockerfile
-    image: chatwoot-webpack
+    image: chatwoot-webpack:development
     volumes:
       - ./:/app:delegated
       - node_modules:/app/node_modules # Node modules shared across containers
@@ -74,8 +75,8 @@ services:
       - "3035" # Webpack dev server
     environment:
       - WEBPACKER_DEV_SERVER_HOST=0.0.0.0
-      - NODE_ENV=production
-      - RAILS_ENV=production
+      - NODE_ENV=development
+      - RAILS_ENV=development
     entrypoint: docker/entrypoints/webpack.sh
     command: bin/webpack-dev-server
 
@@ -95,7 +96,7 @@ services:
       - 1025:1025
       - 8025:8025
 
-  nginx:
+      nginx:
     build:
       context: .
       dockerfile: nginx/Dockerfile
