init docker compose og

--- a/docker-compose-og.yaml
+++ b/docker-compose-og.yaml
@@ -5,80 +5,39 @@ services:
     build:
       context: .
       dockerfile: ./docker/Dockerfile
-      args:
-        BUNDLE_WITHOUT: ''
-        EXECJS_RUNTIME: 'Node'
-        RAILS_ENV: 'development'
-        RAILS_SERVE_STATIC_FILES: 'false'
-    tty: true
-    stdin_open: true
-    image: chatwoot:development
-    env_file: .env
+    env_file: .env ## Change this file for customized env variables
 
   rails:
     <<: *base
-    build:
-      context: .
-      dockerfile: ./docker/dockerfiles/rails.Dockerfile
-    image: chatwoot-rails:development
-    volumes:
-      - ./:/app:delegated
-      - node_modules:/app/node_modules
-      - packs:/app/public/packs
-      - cache:/app/tmp/cache
-      - bundle:/usr/local/bundle
     depends_on:
+      - postgres
       - redis
-      - webpack
-      - mailhog
-      - sidekiq
     ports:
       - 3000:3000
-    env_file: .env
     environment:
-      - WEBPACKER_DEV_SERVER_HOST=webpack
-      - NODE_ENV=development
-      - RAILS_ENV=development
+      - NODE_ENV=production
+      - RAILS_ENV=production
     entrypoint: docker/entrypoints/rails.sh
-    command: ["bundle", "exec", "rails", "s", "-p", "3000", "-b", "0.0.0.0"]
+    command: ['bundle', 'exec', 'rails', 's', '-p', '3000', '-b', '0.0.0.0']
 
   sidekiq:
     <<: *base
-    image: chatwoot-rails:development
-    volumes:
-      - ./:/app:delegated
-      - node_modules:/app/node_modules
-      - packs:/app/public/packs
-      - cache:/app/tmp/cache
-      - bundle:/usr/local/bundle
     depends_on:
+      - postgres
       - redis
-      - mailhog
     environment:
-      - NODE_ENV=development
-      - RAILS_ENV=development
-    command: ["bundle", "exec", "sidekiq", "-C", "config/sidekiq.yml"]
+      - NODE_ENV=production
+      - RAILS_ENV=production
+    command: ['bundle', 'exec', 'sidekiq', '-C', 'config/sidekiq.yml']
 
-  webpack:
-    <<: *base
-    build:
-      context: .
-      dockerfile: ./docker/dockerfiles/webpack.Dockerfile
-    image: chatwoot-webpack:development
-    volumes:
-      - ./:/app:delegated
-      - node_modules:/app/node_modules # Node modules shared across containers
-      - packs:/app/public/packs
-      - cache:/app/tmp/cache
-      - bundle:/usr/local/bundle
+  postgres:
+    image: postgres:12
+    restart: always
     ports:
-      - "3035" # Webpack dev server
-    environment:
-      - WEBPACKER_DEV_SERVER_HOST=0.0.0.0
-      - NODE_ENV=development
-      - RAILS_ENV=development
-    entrypoint: docker/entrypoints/webpack.sh
-    command: bin/webpack-dev-server
+      - '5432:5432'
+    volumes:
+      - /data/postgres:/var/lib/postgresql/data
+    env_file: .env 
 
   redis:
     image: redis:alpine
@@ -86,17 +45,11 @@ services:
     command: ["sh", "-c", "redis-server --requirepass \"$REDIS_PASSWORD\""]
     env_file: .env
     volumes:
-      - redis:/data/redis
+      - /data/redis:/data
     ports:
       - '6379:6379'
 
-  mailhog:
-    image: mailhog/mailhog
-    ports:
-      - 1025:1025
-      - 8025:8025
-
-      nginx:
+  nginx:
     build:
       context: .
       dockerfile: nginx/Dockerfile
@@ -114,10 +67,3 @@ secrets:
     file: secret/cert.crt
   key:
     file: secret/cert.key
-
-volumes:
-  redis:
-  packs:
-  node_modules:
-  cache:
-  bundle:
