--- a/docker-compose.production.yaml
+++ b/docker-compose.production.yaml
@@ -2,7 +2,9 @@ version: '3'
 
 services:
   base: &base
-    image: chatwoot/chatwoot:latest
+    build:
+      context: .
+      dockerfile: ./docker/Dockerfile
     env_file: .env ## Change this file for customized env variables
 
   rails:
@@ -35,11 +37,7 @@ services:
       - '5432:5432'
     volumes:
       - /data/postgres:/var/lib/postgresql/data
-    environment:
-      - POSTGRES_DB=chatwoot
-      - POSTGRES_USER=postgres
-      # Please provide your own password.
-      - POSTGRES_PASSWORD=
+    env_file: .env 
 
   redis:
     image: redis:alpine
