--- a/.env.example
+++ b/.env.example
@@ -6,7 +6,7 @@ FRONTEND_URL=http://0.0.0.0:3000
 
 # If the variable is set, all non-authenticated pages would fallback to the default locale.
 # Whenever a new account is created, the default language will be DEFAULT_LOCALE instead of en
-DEFAULT_LOCALE=ru
+# DEFAULT_LOCALE=en
 
 # If you plan to use CDN for your assets, set Asset CDN Host
 ASSET_CDN_HOST=
@@ -33,23 +33,23 @@ REDIS_SENTINELS=
 REDIS_SENTINEL_MASTER_NAME=
 
 # Postgres Database config variables
-POSTGRES_HOST=
-POSTGRES_USERNAME=
+POSTGRES_HOST=postgres
+POSTGRES_USERNAME=postgres
 POSTGRES_PASSWORD=
 RAILS_ENV=development
 RAILS_MAX_THREADS=5
 
 # The email from which all outgoing emails are sent
 # could user either  `email@yourdomain.com` or `BrandName <email@yourdomain.com>`
-MAILER_SENDER_EMAIL=
+MAILER_SENDER_EMAIL=Chatwoot <accounts@chatwoot.com>
 
 
 #SMTP domain key is set up for HELO checking
 SMTP_DOMAIN=chatwoot.com
 # the default value is set "mailhog" and is used by docker-compose for development environments,
 # Set the value as "localhost" or your SMTP address in other environments
-SMTP_ADDRESS=
-SMTP_PORT=465
+SMTP_ADDRESS=mailhog
+SMTP_PORT=1025
 SMTP_USERNAME=
 SMTP_PASSWORD=
 # plain,login,cram_md5
@@ -157,6 +157,7 @@ USE_INBOX_AVATAR_FOR_BOT=true
 # LETTER_OPENER=true
 
 ## Jira credentials
+JIRA_HOST_URL=
 # JIRA_USERNAME can be your email
 JIRA_USERNAME=
 # Your generated Api token
