--- a/package.json
+++ b/package.json
@@ -103,7 +103,7 @@
     "prettier": "^1.16.4",
     "rimraf": "^3.0.0",
     "vue-jest": "3.0.7",
-    "webpack-dev-server": "^3.11.2"
+    "webpack-dev-server": "3.11.2"
   },
   "engines": {
     "node": ">=10.x",
