--- a/.env.example
+++ b/.env.example
@@ -156,6 +156,9 @@ USE_INBOX_AVATAR_FOR_BOT=true
 # if you want to use letter_opener for local emails
 # LETTER_OPENER=true
 
+# meant to be used in github codespaces
+# WEBPACKER_DEV_SERVER_PUBLIC=
+
 ## Jira credentials
 JIRA_HOST_URL=
 # JIRA_USERNAME can be your email
