--- a/config/webpacker.yml
+++ b/config/webpacker.yml
@@ -71,9 +71,11 @@ development:
     use_local_ip: false
     quiet: false
     headers:
-      "Access-Control-Allow-Origin": "*"
+      'Access-Control-Allow-Origin': '*'
+      'Access-Control-Allow-Methods': 'GET, POST, PUT, DELETE, PATCH, OPTIONS'
+      'Access-Control-Allow-Headers': 'X-Requested-With, content-type, Authorization'
     watch_options:
-      ignored: "**/node_modules/**"
+      ignored: '**/node_modules/**'
 
 test:
   <<: *default
