--- a/.env.example
+++ b/.env.example
@@ -166,7 +166,7 @@ USE_INBOX_AVATAR_FOR_BOT=true
 # WEBPACKER_DEV_SERVER_PUBLIC=
 
 ## Jira credentials
-JIRA_HOST_URL=
+JIRA_ORGANIZATION_URL=
 # JIRA_USERNAME can be your email
 JIRA_USERNAME=
 # Your generated Api token
