--- a/docker-compose-og.yaml
+++ b/docker-compose-og.yaml
@@ -14,18 +14,32 @@ services:
         max-size: "10m"
         max-file: "1"
 
-  rails:
+  rails1:
     <<: *base
     depends_on:
       - postgres
       - redis
-    ports:
-      - 3000:3000
     environment:
       - NODE_ENV=production
       - RAILS_ENV=production
     entrypoint: docker/entrypoints/rails.sh
     command: ['bundle', 'exec', 'rails', 's', '-p', '3000', '-b', '0.0.0.0']
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "1"
+
+    rails2:
+    <<: *base
+    depends_on:
+      - postgres
+      - redis
+    environment:
+      - NODE_ENV=production
+      - RAILS_ENV=production
+    entrypoint: docker/entrypoints/rails.sh
+    command: ['bundle', 'exec', 'rails', 's', '-p', '3002', '-b', '0.0.0.0']
     logging:
       driver: "json-file"
       options:
