--- a/nginx/conf.d/site.conf
+++ b/nginx/conf.d/site.conf
@@ -1,3 +1,9 @@
+upstream backend {
+  server rails1:3000 fail_timeout=5s max_fails=1;
+  server rails2:3002 fail_timeout=5s max_fails=1;
+}
+
+
 server {
   listen 443 ssl http2 default_server;
   listen [::]:443 ssl http2 default_server;
@@ -15,7 +21,7 @@ server {
 
   location / {
     proxy_pass_header Authorization;
-    proxy_pass http://rails:3000;
+    proxy_pass http://backend;
     proxy_set_header Upgrade $http_upgrade;
     proxy_set_header Connection "upgrade";
     proxy_set_header Host $host;
